--- a/src/njk/_partials/nav.njk
+++ b/src/njk/_partials/nav.njk
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="index.html">Navbar</a>
+  <a class="navbar-brand" href="index.html">Queen</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -7,12 +7,17 @@
     <ul class="navbar-nav">
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown link
+          Band Members
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="detail-entry-example.html">Entry example</a>
-          <a class="dropdown-item" href="detail-book-shipping-news.html">Data detail example</a>
-          <a class="dropdown-item" href="#">Extra link goes nowhere</a>
+          <a class="dropdown-item" href="detail-entry-example.html">Freddie Mercury</a>
+          <a class="dropdown-item" href="detail-book-shipping-news.html">Brian May</a>
+          <a class="dropdown-item" href="#">Roger Taylor</a>
+          <a class="dropdown-item" href="#">Barry Mitchell</a>
+          <a class="dropdown-item" href="#">Mike Grose</a>
+            <li class="nav-item">
+        <a class="nav-link" href="#">Discography</a>
+      </li>
         </div>
       </li>
     </ul>
