--- a/src/njk/_partials/nav.njk
+++ b/src/njk/_partials/nav.njk
@@ -10,11 +10,10 @@
           Band Members
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="detail-entry-example.html">Freddie Mercury</a>
-          <a class="dropdown-item" href="detail-book-shipping-news.html">Brian May</a>
-          <a class="dropdown-item" href="#">Roger Taylor</a>
-          <a class="dropdown-item" href="#">Barry Mitchell</a>
-          <a class="dropdown-item" href="#">Mike Grose</a>
+          <a class="dropdown-item" href="freddie-mercury.html">Freddie Mercury</a>
+          <a class="dropdown-item" href="brian-may.html">Brian May</a>
+          <a class="dropdown-item" href="roger-taylor.html">Roger Taylor</a>
+          <a class="dropdown-item" href="john-deacon.html">John Deacon</a>
             <li class="nav-item">
         <a class="nav-link" href="#">Discography</a>
       </li>
