--- a/src/njk/discography.njk
+++ b/src/njk/discography.njk
@@ -1,4 +1,5 @@
 {% extends '_layouts/base.njk' %}
+{% set discography = queen.discography %}
 
  <title>{% block page_title %}Discography{% endblock %}</title>
  {% block page_description %}A list of Queen's discography{% endblock %}
@@ -7,15 +8,22 @@
 <article class="container">
  <div class="row">
       <div class="col-sm-4">
-      {% block info %}
-        <p> Testing </p>
+      {% block info%}
+        <h1> Discography </h1>
+        {% for discography in queen.discography %}
+        <h3 class="discography-headline"><a>{{ discography.title }}</a></h3>
+          <p class="discography-year">{{ discography.year }}</p>
+        <hr>
+    {% endfor %}
       {% endblock %}
+
     </div>
      <div class="col-sm-8">
       {% block story %}
-       <p> Testing </p>
+       <img src="img/{{discography.image}}" alt="{{discography.title}}" class="img-fluid">
       {% endblock %}
     </div>
   </div>
 </article>
 {% endblock%}
+
