--- a/src/njk/discography.njk
+++ b/src/njk/discography.njk
@@ -7,7 +7,7 @@
 {% block content %}
 <article class="container">
  <div class="row">
-      <div class="col-sm-4">
+      <div class="col-lg-4 col-sm-2">
       {% block info%}
         <h1> Discography </h1>
         {% for discography in queen.discography %}
@@ -18,12 +18,15 @@
       {% endblock %}
 
     </div>
-     <div class="col-sm-8">
+     <div class="col-lg-8 col-sm-4">
       {% block story %}
-       <img src="img/{{discography.image}}" alt="{{discography.title}}" class="img-fluid">
+        {% for discography in queen.discography %}
+          <img src="img/{{discography.image}}" alt="{{discography.title}}" class="img-fluid">
+        {% endfor %}
       {% endblock %}
     </div>
   </div>
 </article>
 {% endblock%}
-
+  
+  
