--- a/src/njk/discography.njk
+++ b/src/njk/discography.njk
@@ -14,9 +14,8 @@
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">{{discography.title}}</h5>
-            <p class="card-text">{{discography.year}}</p>
-            <p class="card-text"><small class="text-muted">Discography</small></p>
+            <h3 class="card-title">{{discography.title}}</h5>
+            <h4 class="card-text">{{discography.year}}</h4>
           </div>
         </div>
       </div>
