--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -5,18 +5,12 @@
   background-color: navy;
 }
 
-.navbar-toggler {
-  border-color: white;
-}
-
-.navbar-toggler-icon {
-  background-color: white;
-}
-
-.navbar-brand {
+.navbar-custom .navbar-brand {
   color: white;
 }
-.nav-link {
+.navbar-nav {
   color: white;
 }
+
+
 
