--- a/src/njk/_layouts/detail-members.njk
+++ b/src/njk/_layouts/detail-members.njk
@@ -17,7 +17,7 @@
     </div>
     <div class="col-sm-4">
       {% block story %}
-        <img src="img/{{members.image}}" alt="{{members.name}}" class="img-fluid">
+        <img src="img/{{members.imagebw}}" alt="{{members.name}}" class="img-fluid">
         <p class="caption">{{members.name}} </p>
       {% endblock %}
     </div>
