--- a/src/njk/discography.njk
+++ b/src/njk/discography.njk
@@ -6,21 +6,22 @@
 
 {% block content %}
   <article class="containter">
-  {% for discography in queen.discography%}
-    <div class="card mb-3">
-      <div class="row no-gutters">
-        <div class="col-md-4">
-          <img src="img/{{discography.image}}" class="card-img" alt="{{discography.title}}">
-        </div>
-        <div class="col-md-8">
-          <div class="card-body">
-            <h3 class="card-title">{{discography.title}}</h5>
-            <h4 class="card-text">{{discography.year}}</h4>
+    <h1> Discography </h1>
+    {% for discography in queen.discography%}
+      <div class="card mb-3">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <img src="img/{{discography.image}}" class="card-img" alt="{{discography.title}}">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h3 class="card-title">{{discography.title}}</h5>
+              <h4 class="card-text">{{discography.year}}</h4>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  {% endfor %}
+    {% endfor %}
   </article>
 {% endblock %}
 
