--- a/src/njk/index.njk
+++ b/src/njk/index.njk
@@ -14,8 +14,8 @@
       <p>Here you can channel your inner rock fan and learn about individual members and their billboard hits!</p>
       <ul> 
         {% for members in queen.members %}
-          <h3 class="members-name"><a href="{{ members.url }}">{{ members.name }}</a></h3>
-          <p class="members-instruments">{{ members.instruments }}</p>
+          <p class="members-image"><img src="img/{{ members.image }}"></p>
+          <h4 class="members-name"><a href="{{members.url}}">{{ members.name }}</a></h4>
         <hr>
         {% endfor %}
      </ul>
