why can't i do fonts

--- a/src/njk/discography.njk
+++ b/src/njk/discography.njk
@@ -5,6 +5,7 @@
  {% block page_description %}A list of Queen's discography{% endblock %}
 
 {% block content %}
+<link href="https://fonts.googleapis.com/css2?family=New+Rocker&family=Shadows+Into+Light&display=swap" rel="stylesheet">
   <article class="containter">
     <h1> Discography </h1>
     {% for discography in queen.discography%}
