--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,4 +22,14 @@
 @import "nav";
 @import "jumbotron";
 @import "members";
-@import "index"
+@import "index";
+
+h1 {
+  font-family: 'New Rocker', cursive;
+  color: maroon;
+}
+
+h5 {
+  font-family: 'Shadows Into Light', cursive;
+  color: maroon;
+}
