--- a/src/njk/billboard.njk
+++ b/src/njk/billboard.njk
@@ -4,19 +4,22 @@
  {% block page_description %}Queen's Billboard hits over the years.{% endblock %}
 
 {% block content %}
-<article class="container">
-  <div class="row">
-    <div class="col-sm-6">
-      {% block info %}
-         <iframe title="Queen's Billboard Hits" aria-label="Bar Chart" id="datawrapper-chart-6lvPD" src="//datawrapper.dwcdn.net/6lvPD/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="766"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();</script>
-      {% endblock %}
-    </div>
-    <div class="col-sm-6">
-      {% block story %}
-        <img src="img/queen-live-on-stage.jpg" alt="queen live on stage" class="img-fluid">
-        <img src="img/queen-band-early.jpg" alt="early days of queen" class="img-fluid">
-      {% endblock %}
-    </div>
-  </div>
-</article>
+  <link href="https://fonts.googleapis.com/css2?family=New+Rocker&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <article class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          {% block info %}
+            <h1> Billboard Chart </h1>
+              <iframe title="Queen's Billboard Hits" aria-label="Bar Chart" id="datawrapper-chart-6lvPD" src="https://datawrapper.dwcdn.net/6lvPD/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="766"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}}))}();
+              </script>
+          {% endblock %}
+        </div>
+        <div class="col-sm-6">
+          {% block story %}
+            <img src="img/queen-live-on-stage.jpg" alt="queen live on stage" class="img-fluid">
+            <img src="img/queen-band-early.jpg" alt="early days of queen" class="img-fluid">
+          {% endblock %}
+        </div>
+      </div>
+    </article>
 {% endblock %}
