--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -2,6 +2,9 @@
   text-align: center;
 }
 
-#index-page h1 {
-  font-family: 'New Rocker', cursive;
+.members-card{
+  float: left;
+  margin-right: 10px;
+  margin-left: 5px;
+  align-content: center;
 }
